--- a/lang/ar.json
+++ b/lang/ar.json
@@ -17,5 +17,29 @@
   "By creating account you accept Terms and Conditions and privacy policy": "بمجرد انشاء حساب فأنت موافق علي الشروط والاحكام الخاصة بنا",
   "Create account with Google": "انشاء حساب بجوجل",
   "Create account with Facebook": "انشاء حساب بفيسبوك",
-  "Already have an account?": "هل تملك حساب؟"
+  "Already have an account?": "هل تملك حساب؟",
+  "Home": "الرئيسية",
+  "Search": "البحث",
+  "Help": "المساعدة",
+  "Shop": "المتجر",
+  "Account": "الحساب",
+  "About our Services": "عن خدمتنا",
+  "Choose your language": "اختار اللغة",
+  "Country": "البلد",
+  "language": "اللغة",
+  "App version": "أصدار التطبيق",
+  "Hello !!": "أهلا !!",
+  "We are happy to be here :)": "نحن سعداء بوجودك هنا",
+  "Sign in now": "تسجيل الدخول الأن",
+  "My orders": "طلباتي",
+  "Messages": "الرسائل",
+  "Product wishlist": "قائمة المفضلة",
+  "Recently viewed": "المنتجات التي شاهدتها",
+  "My cart": "عربة التسوق",
+  "Details": "التفاصيل",
+  "Address": "العنوان",
+  "About Us": "معلومات عنا",
+  "Settings": "الأعدادات",
+  "Info about the app": "معلومات عن التطبيق",
+  "My settings": "أعداداتي الخاصة"
 }
