--- a/lang/en.json
+++ b/lang/en.json
@@ -17,5 +17,29 @@
   "By creating account you accept Terms and Conditions and privacy policy": "By creating account you accept Terms and Conditions and privacy policy",
   "Create account with Google": "Create account with Google",
   "Create account with Facebook": "Create account with Facebook",
-  "Already have an account?": "Already have an account?"
+  "Already have an account?": "Already have an account?",
+  "Home": "Home",
+  "Search": "Search",
+  "Help": "Help",
+  "Shop": "Shop",
+  "Account": "Account",
+  "About our Services": "About our Services",
+  "Choose your language": "Choose your language",
+  "Country": "Country",
+  "language": "language",
+  "App version": "App version",
+  "Hello !!": "Hello !!",
+  "We are happy to be here :)": "We are happy to be here :)",
+  "Sign in now": "Sign in now",
+  "My orders": "My orders",
+  "Messages": "Messages",
+  "Product wishlist": "Product wishlist",
+  "Recently viewed": "Recently viewed",
+  "My cart": "My cart",
+  "Details": "Details",
+  "Address": "Address",
+  "About Us": "About Us",
+  "Settings": "Settings",
+  "Info about the app": "Info about the app",
+  "My settings": "My settings"
 }
