--- a/lang/ar.json
+++ b/lang/ar.json
@@ -46,5 +46,29 @@
   "Fashion": "الموضة",
   "Electric": "الأجهزة الكهربائية",
   "Perfumes": "العطور",
-  "New deals": "الجديد"
+  "New deals": "الجديد",
+  "Validate order": "تأكيد الطلب",
+  "color": "اللون",
+  "Items: " : "العدد: ",
+  "Subtotals: ": "السعر الصافي: ",
+  "Tax: ": "الضرايب: ",
+  "Total:": "السعر الكلي: ",
+  "Delivery: ": "التوصيل: ",
+  "Name": "الأسم",
+  "Enter your name": "أدخل اسمك",
+  "Enter your address": "أدخل عنوانك",
+  "Enter your country": "أدخل البلد",
+  "City": "المدينة",
+  "Enter your city": "أدخل المدينة",
+  "State": "الحي/المنطقة",
+  "Enter your state": "أدخل الحي/المنطقة",
+  "Phone number": "رقم الهاتف",
+  "Enter your Phone number": "أدخل رقم الهاتف",
+  "Postal code": "رقم البريد",
+  "Enter your postal code": "أدخل رقم البريد",
+  "Cash on delivery": "الدفع عند الأستلام",
+  "Your cart is empty": "العربة فارغة",
+  "Order submitted successfully :)": "طب ارسال الطلب بنجاح :)",
+  "Something went wrong try again !!": "حدث خطأ من فضلك أعد المحاولة !!",
+  "Get it": "أغلاق"
 }
