--- a/lang/en.json
+++ b/lang/en.json
@@ -46,5 +46,29 @@
   "Fashion": "Fashion",
   "Electric": "Electric",
   "Perfumes": "Perfumes",
-  "New deals": "New deals"
+  "New deals": "New deals",
+  "Validate order": "Validate order",
+  "color": "color",
+  "Items: " : "Items: ",
+  "Subtotals: ": "Subtotals: ",
+  "Tax: ": "Tax: ",
+  "Total:": "Total:",
+  "Delivery: ": "Delivery: ",
+  "Name": "Name",
+  "Enter your name": "Enter your name",
+  "Enter your address": "Enter your address",
+  "Enter your country": "Enter your country",
+  "City": "City",
+  "Enter your city": "Enter your city",
+  "State": "State",
+  "Enter your state": "Enter your state",
+  "Phone number": "Phone number",
+  "Enter your Phone number": "Enter your Phone number",
+  "Postal code": "Postal code",
+  "Enter your postal code": "Enter your postal code",
+  "Cash on delivery": "Cash on delivery",
+  "Your cart is empty": "Your cart is empty",
+  "Order submitted successfully :)": "Order submitted successfully :)",
+  "Something went wrong try again !!": "Something went wrong try again !!",
+  "Get it": "Get it"
 }
