--- a/lang/en.json
+++ b/lang/en.json
@@ -30,7 +30,7 @@
   "App version": "App version",
   "Hello !!": "Hello !!",
   "We are happy to be here :)": "We are happy to be here :)",
-  "Sign up now": "Sign in now",
+  "Sign up now": "Sign up now",
   "My orders": "My orders",
   "Messages": "Messages",
   "Product wishlist": "Product wishlist",
