--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">dot</string>
     <string name="facebook_app_id">279697160264677</string>
     <string name="fb_login_protocol_scheme">fb279697160264677</string>
+    <string name="facebook_client_token">EAADZBYhHh2ZBUBAGZCAvZAvBH1IZARbEXHwNHRZAG6vhUzVpuPMq8vJ0dvUecnFkWUjZCqBzDEl0VB76KpVZAPQ3cLaW0wgnqPL6vHUNmWfzzwTR7UZBvRXSEL3dG9W4IXoZAXXYKWwwEZB3GuRGiX0LbZBQo9BUKjjnI6yLljkwcXlAAeO3sQGpBW8gk1dxAAzsjZBu7BhWMNawx9apkt56fUoRAGUzY1HjDCVBdkGHZAd1tUZB2QtRFHDdNyu</string>
 </resources>
 
