--- a/lang/en.json
+++ b/lang/en.json
@@ -79,5 +79,23 @@
   "There is no orders for now": "There is no orders for now",
   "All your orders will be saved here in order to view their status at anytime.": "All your orders will be saved here in order to view their status at anytime.",
   "Continue shopping": "Continue shopping",
-  "Orders": "Orders"
+  "Orders": "Orders",
+  "Add to cart": "Add to cart",
+  "reviews": "reviews",
+  "In stock": "In stock",
+  "Out of stock": "Out of stock",
+  "Product specifications": "Product specifications",
+  "Color": "Color",
+  "Main material": "Main material",
+  "Model": "Model",
+  "Product country": "Product country",
+  "Product line": "Product line",
+  "Size": "Size",
+  "Weight": "Weight",
+  "Website": "Website",
+  "No reviews yet": "No reviews yet",
+  "Similar products": "Similar products",
+  "See all >": "See all >",
+  "Reviews": "Reviews",
+  "Total doesn\\'t include delivery price": "Total doesn\\'t include delivery price"
 }
