--- a/lang/ar.json
+++ b/lang/ar.json
@@ -79,5 +79,23 @@
   "There is no orders for now": "لا يوجد طلبات حتي الأن",
   "All your orders will be saved here in order to view their status at anytime.": "كل الطلبات ستعرض هنا في حالة متابعتها في اي وقت",
   "Continue shopping": "استكمال التسوق",
-  "Orders": "الطلبات"
+  "Orders": "الطلبات",
+  "Add to cart": "أضافة الي عربة التسوق",
+  "reviews": "التقييمات",
+  "In stock": "في المتجر",
+  "Out of stock": "لا يوجد في المتجر",
+  "Product specifications": "مواصفات المنتج",
+  "Color": "اللون",
+  "Main material": "المعدن الاساسي",
+  "Model": "النموذج",
+  "Product country": "الدولة المنتجة",
+  "Product line": "خط الانتاج",
+  "Size": "الحجم",
+  "Weight": "الوزن",
+  "Website": "الموقع",
+  "No reviews yet": "لا يوجد تقييمات",
+  "Similar products": "المنتجات الشبيهه",
+  "See all >": "رؤية المزيد",
+  "Reviews": "التقييمات",
+  "Total doesn\\'t include delivery price": "السعر الكلي لا يشمل التوصيل"
 }
